--- a/포켓몬.md
+++ b/포켓몬.md
@@ -39,3 +39,26 @@ nums의 길이(N)는 1 이상 10,000 이하의 자연수이며, 항상 짝수로
 입출력 예 #3
 6마리의 폰켓몬이 있으므로, 3마리의 폰켓몬을 골라야 합니다.
 가장 많은 종류의 폰켓몬을 고르기 위해서는 3번 폰켓몬 한 마리와 2번 폰켓몬 두 마리를 고르거나, 혹은 3번 폰켓몬 두 마리와 2번 폰켓몬 한 마리를 고르면 됩니다. 따라서 최대 고를 수 있는 폰켓몬 종류의 수는 2입니다.
+
+## 문제 풀이
+```java
+import java.util.HashMap;
+class Solution {
+    public int solution(int[] nums) {
+        int answer = 0;
+        HashMap<Integer, Integer> map = new HashMap<>();
+        for(int i: nums) {
+            if(!map.containsKey(i)) map.put(i, 1);
+            else {
+                int cnt = map.get(i);
+                map.put(i, cnt + 1);
+            }
+        }
+        
+        if(nums.length / 2 < map.size()) answer = nums.length / 2;
+        else answer = map.size();
+        
+        return answer;
+    }
+}
+```
